--- a/src/partials/Advantages.html
+++ b/src/partials/Advantages.html
@@ -10,8 +10,8 @@
   <section>
     <ul>
         <li>
-            <svg>
-                <use href="#"></use>
+            <svg width="50" height="50">
+                <use href=".././images/iconadvantages.svg#icon-frozen1"></use>"></use>
             </svg>
 
             <h3>721</h3>
@@ -19,18 +19,18 @@
         </li>
 
         <li>
-            <svg>
-                <use href="#"></use>
-            </svg>
+          <svg width="50" height="50">
+            <use href=".././images/iconadvantages.svg#icon-frozen2"></use>"></use>
+        </svg>
 
-            <h3>P16kg</h3>
+            <h3>16kg</h3>
             <p>Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
         </li>
 
         <li>
-            <svg>
-                <use href="#"></use>
-            </svg>
+          <svg width="44" height="50">
+            <use href=".././images/iconadvantages.svg#icon-frozen3"></use>"></use>
+        </svg>
 
             <h3>84</h3>
             <p>Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
