--- a/css/styles.css
+++ b/css/styles.css
@@ -20,7 +20,10 @@ a {
 
 body {
     font-size: 14px;
+    width: 1200px;
+/*
     width: 1600px;
+*/
     margin: 0 auto;
 }
 
@@ -48,7 +51,7 @@ body {
 
 .title{
   font-family:'Titan One', cursive;
-  font-weight: 400; 
+  font-weight: 400;
   line-height:30px;
   text-align: center;
 }
@@ -68,7 +71,7 @@ body {
   font-weight: 400;
   line-height: 66.41px;
   letter-spacing: 0.06em;
-  
+
 
 }
 
@@ -102,7 +105,7 @@ body {
 button{
   margin-top: 40px;
   width: 176px;
-  height: 44px; 
+  height: 44px;
   background-color: #FFFFFF;
   border-radius: 22px;
   font-family:'DM Sans', sans-serif;
@@ -111,7 +114,7 @@ button{
   line-height: 28px;
   text-align: center;
   color: #D41443;
-  
+
 }
 
 .second-main{
