--- a/css/styles.css
+++ b/css/styles.css
@@ -77,6 +77,12 @@ nav ul li {
     font-size: 16px;
 }
 
+.cone {
+    position: absolute;
+    left: 636px;
+    top: 108px;
+}
+
 /* CODE -------- */
 
 .products-list {
