correcciones-hero-header

--- a/src/partials/hero-header.html
+++ b/src/partials/hero-header.html
@@ -23,11 +23,8 @@
     <header>
       <div>
         <a href="">
-            <img
-              src="src/images/sooo-tasty.png"
-              alt="logo"
-            />
-          </a>
+          <img src="src/images/sooo-tasty.png" alt="logo" />
+        </a>
         <h3>ICECREAM</h3>
         <nav>
           <ul>
@@ -50,10 +47,7 @@
         <div>
           <h2>BIO ECO</h2>
           <a href="">
-            <img
-              src="src/images/milk.jpg"
-              alt="logo"
-            />
+            <img src="src/images/milk.jpg" alt="logo" />
           </a>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit, sed do
@@ -65,10 +59,7 @@
       <div>
         <!-- big ice cream cone image -->
         <a href="">
-          <img
-            src="src/images/cream-cone.jpg"
-            alt="logo"
-          />
+          <img src="src/images/cream-cone.jpg" alt="logo" />
         </a>
       </div>
 
@@ -79,53 +70,10 @@
         <p>food trucks</p>
         <div>
           <a href="">
-            <img
-              src="src/images/sooo-tasty1.jpg"
-              alt="logo"
-            />
+            <img src="src/images/sooo-tasty1.jpg" alt="logo" />
           </a>
         </div>
       </div>
     </header>
-
-    <main>
-      <!-- Section About (how it's made ?) -->
-      <div>
-        <h3>TRADITION AND LOVE</h3>
-        <h1>HOW IT'S MADE ?</h1>
-      </div>
-
-      <div>
-        <!-- decorative image cow and milk -->
-      </div>
-      
-      <div>
-        <p>
-          Fusce ut velit laoreet, tempus arcu eu, molestie tortor. <br />
-          Nam vel justo cursus, faucibus lorem eget, egestaseros.<br />
-          Maecenas elefend erat at justo fringilla.
-        </p>
-        <p>
-          Curabitur lacina enim at ex blandit, vel pellentesque odio <br />
-          elementum. Mauris rhoncus orci in imperdiet placerat. <br />
-          Vestibulum euismod nisl suscipt ligula volutpat, a feugiat urna <br />
-          maximus. Creas massa nibh, tincidunt.
-        </p>
-        <p>Aliquam erat volutpat. Aenean accumsan.</p>
-        <button class="button" type="submit">Read more</button>
-      </div>
-      <div>
-        <h1>721</h1>
-        <p>Aliquam ac dui vel dui vaulptate <br />consectetur. Mauris massa</p>
-      </div>
-      <div>
-        <h1>16 Kg</h1>
-        <p>Aliquam ac dui vel dui vaulptate <br />consectetur. Mauris massa</p>
-      </div>
-      <div>
-        <h1>84</h1>
-        <p>Aliquam ac dui vel dui vaulptate <br />consectetur. Mauris massa</p>
-      </div>
-    </main>
   </body>
 </html>
