--- a/css/styles.css
+++ b/css/styles.css
@@ -39,7 +39,7 @@ body {
 
 /* Start to write code from here */
 header {
-    background-color: #FFB8CA;
+    background-color: var(--color-pink);
 }
 
 .home-container {
@@ -84,6 +84,37 @@ nav ul li {
 }
 
 /* CODE -------- */
+.products {
+    width: 1200px;
+    margin-top: 60px;
+    margin: 60px auto;
+}
+
+.products>span {
+    font-family: 'Titan One', cursive;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 30px;
+    line-height: 34px;
+    text-align: center;
+    letter-spacing: 0.04em;
+    text-transform: uppercase;
+    color: #FFA5BA;
+}
+
+.products>h2 {
+    font-family: 'Titan One', cursive;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 58px;
+    line-height: 66px;
+    text-align: center;
+    letter-spacing: 0.06em;
+    text-transform: uppercase;
+    color: var(--color-red);
+    margin-top: 16px;
+    margin-bottom: 20px;
+}
 
 .products-list {
     display: flex;
@@ -97,6 +128,7 @@ nav ul li {
     width: 368px;
     text-align: center;
     padding-top: 165px;
+    padding-bottom: 60px;
     border-radius: 24px;
 }
 
@@ -112,6 +144,19 @@ nav ul li {
     background-color: var(--color-green);
 }
 
+.products-item>h3 {
+    font-family: 'Titan One';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 30px;
+    line-height: 34px;
+    text-align: center;
+    letter-spacing: 0.04em;
+    text-transform: uppercase;
+    color: var(--color-white);
+    margin-bottom: 32px;
+}
+
 .products-item>p {
     font-family: 'DM Sans';
     font-style: normal;
@@ -123,4 +168,10 @@ nav ul li {
     color: var(--color-white);
     width: 241px;
     height: 106px;
+    margin-top: 32px;
+    margin-bottom: 60px;
+}
+
+.products-item>img {
+    cursor: pointer;
 }
