with icons and colors

--- a/src/CSS/styles.css
+++ b/src/CSS/styles.css
@@ -37,4 +37,55 @@
      color: #FFA5BA;
  
  }
+ .contacts{
+    display: flex;
+    font-family: 'DM Sans';
+font-style: normal;
+font-weight: 700;
+font-size: 12px;
+line-height: 186%;
+/* or 22px */
+margin-right: 20px;
+justify-content: end;
+
+color: #000000;
+ }
+ .number{
+    color: #D41443;
+ }
+ .registered{
+    font-family: 'DM Sans';
+font-style: normal;
+font-weight: 700;
+font-size: 14px;
+line-height: 152%;
+display: flex;
+justify-content: center;
+/* or 21px */
+
+/* text-align: center; */
+
+color: #907E82;
+ }
+ .circular-container{
+    display: flex;
+        justify-content: center;
+        align-items: center;
+    width: 32px;
+    height: 32px;
+    background:#FEA5BB;
+    border-radius: 50%;
+    
+   
+ }
+ .icon{
+    
+    fill: #FFFFFF;
+ }
+ .social-links{
+    display: flex;
+    justify-content: end;
+    margin-right: 20px;
+    gap: 28.24px;
+ }
  
