--- a/src/partials/index.html
+++ b/src/partials/index.html
@@ -37,12 +37,32 @@
                 <h3>HOME MADE ICE CREAM MADE</h3>
                 <h2>WITH PASSION</h2>
             </div>
-            <div>
+            <section class="social-links">
+                <div class="circular-container">
+                    <svg class="icon" width="20" height="20">
+                      <!-- tamaño de la ventana de visualizacion se ajusta en view box y aca se modifica el tamaño de el svg-->
+                      <use href="../images/icons.svg#icon-github"></use>
+                    </svg>
+                  </div>
+                  <div class="circular-container">
+                    <svg class="icon" width="20" height="20">
+                      <!-- tamaño de la ventana de visualizacion se ajusta en view box y aca se modifica el tamaño de el svg-->
+                      <use href="../images/icons.svg#icon-paper-plane"></use>
+                    </svg>
+                  </div>
+                  <div class="circular-container">
+                    <svg class="icon" width="20" height="20">
+                      <!-- tamaño de la ventana de visualizacion se ajusta en view box y aca se modifica el tamaño de el svg-->
+                      <use href="../images/icons.svg#icon-facebook22"></use>
+                    </svg>
+                  </div>
+            </section>
+            <div class="contacts">
                 <P>Feel free to contact</P>
-                <p>+61(O)383 766 284</p>
+                <p class="number">+61(O)383 766 284</p>
             </div>
         </div>
-        <p>2022 - IceCream. All Rights Reserved</p>
+        <p class="registered">2022 - IceCream. All Rights Reserved</p>
     </footer>
       
     
