--- a/src/CSS/styles.css
+++ b/src/CSS/styles.css
@@ -13,8 +13,8 @@
     
    
 }
-.margins{
-   /*  margin-left: 20px; */
+/* .margins{
+    margin-left: 20px;
     padding-left: 20px;
     font-family: 'Titan One', cursive;
     font-style: normal;
@@ -26,15 +26,33 @@
     
     color: #D41443;
 
-}
-.margins h3{
-    font-style: normal;
-    font-weight: 400;
-    font-size: 18px;
-    line-height: 21px;
-    text-transform: uppercase;
-    
-     color: #FFA5BA;
+} */
+.margins >h3{
+    font-family: 'Titan One';
+font-style: normal;
+font-weight: 400;
+font-size: 18px;
+line-height: 21px;
+text-transform: uppercase;
+
+color: #FFA5BA;
+margin-left: 20px;
+
+ 
+ }
+ .margins >h2{
+    margin-left: 20px;
+   margin-bottom: 0px;
+   margin-top: 0px;
+   font-family: 'Titan One';
+font-style: normal;
+font-weight: 400;
+font-size: 34px;
+line-height: 39px;
+letter-spacing: 0.04em;
+text-transform: uppercase;
+
+color: #D41443;
  
  }
  .contacts{
