--- a/src/partials/index.html
+++ b/src/partials/index.html
@@ -34,8 +34,9 @@
     <footer class="container-footer">
         <div>
             <div class="margins">
-                <h3>HOME MADE ICE CREAM MADE</h3>
-                <h2>WITH PASSION</h2>
+                <h3>HOMEMADE ICE CREAM <br> MADE</h3>
+                <h2>WITH</h2>
+                <h2>PASSION</h2>
             </div>
             <section class="social-links">
                 <div class="circular-container">
@@ -62,7 +63,7 @@
                 <p class="number">+61(O)383 766 284</p>
             </div>
         </div>
-        <p class="registered">2022 - IceCream. All Rights Reserved</p>
+        <p class="registered">© 2022 - IceCream. All Rights Reserved</p>
     </footer>
       
     
