--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,11 @@
 /* Dont touch - just for David*/
 
+/* Inicio CSS Equipo 1*/
+
+/* Fin CSS Equipo 1*/
+
+
+/* Inicio CSS Equipo 2*/
 :root {
     --font-main: 'DM Sans';
     --transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -7,19 +13,15 @@
     --color-white: #fff;
     --color-red: #D41443;
     --color-black: #000000;
-    --color-pink: #FFB8CA;
-    --color-mustard: #F0D1A5;
-    --color-green: #C2E297;
 }
 
-* {
+*{
     padding: 0;
     margin: 0;
 }
 
 a {
     text-decoration: none;
-    font-family: 'DM Sans', sans-serif;
 }
 
 body {
@@ -38,142 +40,156 @@ body {
 
 
 /* Start to write code from here */
-header {
-    background-color: var(--color-pink);
-}
-
-.home-container {
-    display: flex;
-    justify-content: space-between;
-}
-
-.home-container button {
-    font-family: 'DM Sans', sans-serif;
-    font-size: 16px;
-    color: #D41443;
-    width: 159px;
-    height: 44px;
-    background-color: var(--color-white);
-    border-radius: 22px;
-    border-color: 0;
-    text-decoration: none;
-    border: none;
-}
-
-button:hover {
-    background-color: #ECEBEB;
-}
-
-.home img {
-    width: 199px;
-    height: 50px;
-    padding: 40px;
-    padding-left: 16px;
-}
-
-nav ul li {
-    display: inline-block;
-    padding: 52px;
-    font-size: 16px;
-}
-
-.cone {
-    position: absolute;
-    left: 636px;
-    top: 108px;
-}
-
 /* CODE -------- */
-.products {
-    width: 1200px;
-    margin-top: 60px;
-    margin: 60px auto;
+
+.tradition_and_love{
+  width: 100%;
+  height: 1229px;
+  background-color: #FFF5F6;
+  display:flex;
+  flex-direction: column;
+  background-image: url(".././images/section.png");
+  background-repeat: no-repeat;
 }
 
-.products>p {
-    font-family: 'Titan One', cursive;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 30px;
-    line-height: 34px;
-    text-align: center;
-    letter-spacing: 0.04em;
-    text-transform: uppercase;
-    color: #FFA5BA;
+.title{
+  font-family:'Titan One', cursive;
+  font-weight: 400;
+  line-height:30px;
+  text-align: center;
 }
 
-.products>h2 {
-    font-family: 'Titan One', cursive;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 58px;
-    line-height: 66px;
-    text-align: center;
-    letter-spacing: 0.06em;
-    text-transform: uppercase;
-    color: var(--color-red);
-    margin-top: 16px;
-    margin-bottom: 20px;
+.main-title{
+  padding-top: 60px;
+  color:#FFA5BA;
+  font-size: 30px;
+  line-height: 34px;
+  letter-spacing: 0.04em;
+  text-align: center;
 }
 
-.products-list {
-    display: flex;
-    justify-content: space-between;
+.second-title{
+  color: #D41443;
+  font-size: 58px;
+  font-weight: 400;
+  line-height: 66.41px;
+  letter-spacing: 0.06em;
+
+
 }
 
-.products-item {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 368px;
-    text-align: center;
-    padding-top: 165px;
-    padding-bottom: 60px;
-    border-radius: 24px;
-    position: relative;
-    content: "";
+.imag-y-text{
+  display:flex;
 }
 
-.products-item:nth-child(1) {
-    background-color: var(--color-pink);
+
+.paragraph{
+  font-family: 'DM Sans', sans-serif;
+  margin: 150px 0 0 99px;
+  width: 463px;
+  font-weight: 500;
 }
 
-.products-item:nth-child(2) {
-    background-color: var(--color-mustard);
+.paragraph__one{
+  font-size: 16px;
+  line-height: 28px;
+  letter-spacing: 0.04em;
+  text-align: left;
 }
 
-.products-item:nth-child(3) {
-    background-color: var(--color-green);
+.paragraph__two{
+  margin-top: 32px;
+  color:#907E82;
+  font-size: 14px;
+  line-height: 27px;
+  text-align: left;
 }
 
-.products-item>h3 {
-    font-family: 'Titan One';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 30px;
-    line-height: 34px;
-    text-align: center;
-    letter-spacing: 0.04em;
-    text-transform: uppercase;
-    color: var(--color-white);
-    margin-bottom: 32px;
+button{
+  margin-top: 40px;
+  width: 176px;
+  height: 44px;
+  background-color: #FFFFFF;
+  border-radius: 22px;
+  font-family:'DM Sans', sans-serif;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 28px;
+  text-align: center;
+  color: #D41443;
+
 }
 
-.products-item>p {
-    font-family: 'DM Sans';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 176%;
-    text-align: center;
-    letter-spacing: 0.04em;
-    color: var(--color-white);
-    width: 241px;
-    height: 106px;
-    margin-top: 32px;
-    margin-bottom: 60px;
+.second-main{
+  display:flex;
 }
 
-.products-item>img {
-    cursor: pointer;
+.second-main__elements{
+  width: 288px;
 }
+
+.second-main__elements h2{
+  color: #D41443;
+  font-family: 'Titan One', cursive;
+  font-size: 58px;
+  font-weight: 400;
+  line-height: 66px;
+  letter-spacing: 0.04em;
+  text-align: start;
+}
+
+.second-main__elements p{
+  font-family: 'DM Sans', sans-serif;
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 28px;
+  letter-spacing: 0.02em;
+  text-align: left;
+
+}
+
+.colash{
+  width: 1013px;
+  height: 430px;
+  display:flex;
+  align-items: center;
+}
+
+.testimony{
+  margin-top: 320px;
+  font-family:'DM Sans', sans-serif;
+  font-weight: 500;
+  text-align: center;
+}
+
+.testimony__image{
+  width:85px;
+  height:85px;
+}
+
+.testimony__background{
+  width:968px;
+  height:138px;
+  background-color:#FAFAFA;
+}
+
+.testimony__paragraph{
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 30px;
+  letter-spacing: 0.04em;
+  color:#000000;
+}
+
+.testimony__name{
+  font-size: 20px;
+  line-height: 37px;
+  letter-spacing: 0em;
+  text-align: center;
+  color: #000000;
+}
+/* Fin CSS Equipo 2*/
+
+/* Inicio CSS Equipo 3*/
+
+/* Fin CSS Equipo 3*/
