--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,217 @@
 /* Dont touch - just for David*/
 
 /* Inicio CSS Equipo 1*/
+:root {
+    --color-pink: #FFB8CA;
+    --color-mustard: #F0D1A5;
+    --color-green: #C2E297;
+}
+
+header {
+    color: #FFFFFF;
+    background-color: var(--color-pink);
+}
+
+.home-container {
+    display: flex;
+    justify-content: space-between;
+    width: 1200px;
+    margin: auto;
+}
+
+.home-container button {
+    font-size: 16px;
+    color: #D41443;
+    width: 159px;
+    height: 44px;
+    background-color: var(--color-white);
+    border-radius: 22px;
+    border-color: 0;
+    text-decoration: none;
+    border: none;
+}
+
+button:hover {
+    background-color: #ECEBEB;
+}
+
+.home img {
+    width: 199px;
+    height: 50px;
+    padding: 40px;
+    padding-left: 16px;
+}
+
+nav ul li {
+    display: inline-block;
+    padding: 20px;
+    padding-top: 52px;
+    font-family: 'DM Sans', sans-serif;
+    font-size: 16px;
+}
+
+.nav-home {
+    color: var(--color-white);
+}
+
+.nav-home:hover, .nav-home:focus {
+    color: var(--color-red);
+}
+
+.page-title {
+    font-family:'Titan One', cursive;
+    font-size: 38px;
+    color: #D41443;
+}
+
+.page-title >button {
+    font-size: 16px;
+    color: #D41443;
+    width: 159px;
+    height: 44px;
+    background-color: var(--color-white);
+    border-radius: 22px;
+    border-color: 0;
+    text-decoration: none;
+    border: none;
+}
+
+.page-title > button:hover {
+    background-color: #ECEBEB;
+}
+
+.ice-cream {
+    color: #FFFFFF;
+}
+
+p {
+    color: #FFFFFF;
+    font-family: 'DM Sans', sans-serif;
+    font-size: 16px;
+}
+
+.milk p {
+    width: 200px;
+    position: absolute;
+    width: 200px;
+    height: 78px;;
+    left: 229px;
+    top: 456px;
+}
+
+.cafes {
+    position: absolute;
+    left: 1112px;
+    top: 156px;}
+.foodtrucks {
+    position: absolute;
+    left: 1107px;
+    top: 247px;
+}
+
+.cone {
+    position: absolute;
+    left: 636px;
+    top: 108px;
+}
+
+.tasty {
+    position: absolute;
+    left: 880px;
+    top: 423px;
+}
+
+.products {
+    width: 1200px;
+    margin-top: 60px;
+    margin: 60px auto;
+}
+
+.products>span {
+    font-family: 'Titan One', cursive;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 30px;
+    line-height: 34px;
+    text-align: center;
+    letter-spacing: 0.04em;
+    text-transform: uppercase;
+    color: #FFA5BA;
+}
+
+.products>h2 {
+    font-family: 'Titan One', cursive;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 58px;
+    line-height: 66px;
+    text-align: center;
+    letter-spacing: 0.06em;
+    text-transform: uppercase;
+    color: var(--color-red);
+    margin-top: 16px;
+    margin-bottom: 20px;
+}
+
+.products-list {
+    display: flex;
+    justify-content: space-between;
+}
+
+.products-item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 368px;
+    text-align: center;
+    padding-top: 165px;
+    padding-bottom: 60px;
+    border-radius: 24px;
+}
+
+.products-item:nth-child(1) {
+    background-color: var(--color-pink);
+}
+
+.products-item:nth-child(2) {
+    background-color: var(--color-mustard);
+}
+
+.products-item:nth-child(3) {
+    background-color: var(--color-green);
+}
+
+.products-item>h3 {
+    font-family: 'Titan One';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 30px;
+    line-height: 34px;
+    text-align: center;
+    letter-spacing: 0.04em;
+    text-transform: uppercase;
+    color: var(--color-white);
+    margin-bottom: 32px;
+}
+
+.products-item>p {
+    font-family: 'DM Sans';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 176%;
+    text-align: center;
+    letter-spacing: 0.04em;
+    color: var(--color-white);
+    width: 241px;
+    height: 106px;
+    margin-top: 32px;
+    margin-bottom: 60px;
+}
+
+.products-item>img {
+    cursor: pointer;
+}
 
 /* Fin CSS Equipo 1*/
 
