--- a/src/partials/index.html
+++ b/src/partials/index.html
@@ -35,6 +35,7 @@
         <div>
             <div class="margins">
                 <h3>HOMEMADE ICE CREAM <br> MADE</h3>
+               
                 <h2>WITH</h2>
                 <h2>PASSION</h2>
             </div>
@@ -63,7 +64,8 @@
                 <p class="number">+61(O)383 766 284</p>
             </div>
         </div>
-        <p class="registered">© 2022 - IceCream. All Rights Reserved</p>
+        <Div class="line"></Div>
+        <p class="registered">© 2022 - IceCream. <br> All Rights Reserved.</p>
     </footer>
       
     
