--- a/src/CSS/styles.css
+++ b/src/CSS/styles.css
@@ -2,11 +2,20 @@
 @media  screen and (max-width= 800px) {
     
 } */
+:root{
+    --rojo-marca: #D41443;
+    --rosado-marca:#FFA5BA;
+    --rosado-fondo:#FFF5F6;
+    --blanco-marca:#FFFFFF;
+    --gris-textos:#907E82;
+    --gris-separadores:#E1E1E1;
+    --negro-textos:#000000;
+}
 .container-footer{
     display: flex;
     width: 320px;
     
-    background-color:#FFF5F6;
+    background-color:var(--rosado-fondo);
     flex-direction: column;
     font-family: 'DM Sans', sans-serif;
     
@@ -35,7 +44,7 @@ font-size: 18px;
 line-height: 21px;
 text-transform: uppercase;
 
-color: #FFA5BA;
+color: var(--rosado-marca);
 margin-left: 20px;
 
  
@@ -52,7 +61,7 @@ line-height: 39px;
 letter-spacing: 0.04em;
 text-transform: uppercase;
 
-color: #D41443;
+color: var(--rojo-marca);
  
  }
  .contacts{
@@ -66,10 +75,10 @@ line-height: 186%;
 margin-right: 20px;
 justify-content: end;
 
-color: #000000;
+color: var(--negro-textos);
  }
  .number{
-    color: #D41443;
+    color: var(--rojo-marca);
  }
  .registered{
     margin-top: 16px;
@@ -85,7 +94,7 @@ justify-content: center;
 
 /* text-align: center; */
 
-color: #907E82;
+color: var(--gris-textos);
  }
  .circular-container{
     display: flex;
@@ -93,14 +102,14 @@ color: #907E82;
         align-items: center;
     width: 32px;
     height: 32px;
-    background:#FEA5BB;
+    background:var(--rosado-marca);
     border-radius: 50%;
     
    
  }
  .icon{
     
-    fill: #FFFFFF;
+    fill: var(--blanco-marca);
  }
  .social-links{
     display: flex;
@@ -112,7 +121,7 @@ color: #907E82;
  }
  .line{
     width: 100%;
-    border-top: 1px solid #E1E1E1;
+    border-top: 1px solid var(--gris-separadores);
 
  }
  .contacts >p{
