--- a/css/styles.css
+++ b/css/styles.css
@@ -2,215 +2,219 @@
 
 /* Inicio CSS Equipo 1*/
 :root {
-    --color-pink: #FFB8CA;
-    --color-mustard: #F0D1A5;
-    --color-green: #C2E297;
+  --color-pink: #FFB8CA;
+  --color-mustard: #F0D1A5;
+  --color-green: #C2E297;
 }
 
 header {
-    color: #FFFFFF;
-    background-color: var(--color-pink);
+  color: #FFFFFF;
+  background-color: var(--color-pink);
 }
 
 .home-container {
-    display: flex;
-    justify-content: space-between;
-    width: 1200px;
-    margin: auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 1200px;
+  margin: auto;
 }
 
 .home-container button {
-    font-size: 16px;
-    color: #D41443;
-    width: 159px;
-    height: 44px;
-    background-color: var(--color-white);
-    border-radius: 22px;
-    border-color: 0;
-    text-decoration: none;
-    border: none;
+  font-size: 16px;
+  color: var(--color-red);
+  width: 159px;
+  height: 44px;
+  background-color: var(--color-white);
+  border-radius: 22px;
+  border-color: 0;
+  text-decoration: none;
+  border: none;
 }
 
 button:hover {
-    background-color: #ECEBEB;
+  background-color: #ECEBEB;
 }
 
 .home img {
-    width: 199px;
-    height: 50px;
-    padding: 40px;
-    padding-left: 16px;
+  width: 199px;
+  height: 50px;
+  padding: 40px;
+  padding-left: 16px;
 }
 
 nav ul li {
-    display: inline-block;
-    padding: 20px;
-    padding-top: 52px;
-    font-family: 'DM Sans', sans-serif;
-    font-size: 16px;
+  display: inline-block;
+  padding: 0px 20px;
+  font-family: 'DM Sans', sans-serif;
+  font-size: 16px;
 }
 
 .nav-home {
-    color: var(--color-white);
+  color: var(--color-white);
 }
 
-.nav-home:hover, .nav-home:focus {
-    color: var(--color-red);
+.nav-home:hover,
+.nav-home:focus {
+  color: var(--color-red);
 }
 
 .page-title {
-    font-family:'Titan One', cursive;
-    font-size: 38px;
-    color: #D41443;
+  font-family: 'Titan One', cursive;
+  font-size: 38px;
+  color: #D41443;
 }
 
-.page-title >button {
-    font-size: 16px;
-    color: #D41443;
-    width: 159px;
-    height: 44px;
-    background-color: var(--color-white);
-    border-radius: 22px;
-    border-color: 0;
-    text-decoration: none;
-    border: none;
+.page-title>button {
+  font-size: 16px;
+  color: #D41443;
+  width: 159px;
+  height: 44px;
+  background-color: var(--color-white);
+  border-radius: 22px;
+  border-color: 0;
+  text-decoration: none;
+  border: none;
 }
 
-.page-title > button:hover {
-    background-color: #ECEBEB;
+.page-title>button:hover {
+  background-color: #ECEBEB;
 }
 
 .ice-cream {
-    color: #FFFFFF;
+  color: #FFFFFF;
 }
 
 p {
-    color: #FFFFFF;
-    font-family: 'DM Sans', sans-serif;
-    font-size: 16px;
+  color: #FFFFFF;
+  font-family: 'DM Sans', sans-serif;
+  font-size: 16px;
 }
 
 .milk p {
-    width: 200px;
-    position: absolute;
-    width: 200px;
-    height: 78px;;
-    left: 229px;
-    top: 456px;
+  width: 200px;
+  position: absolute;
+  width: 200px;
+  height: 78px;
+  ;
+  left: 229px;
+  top: 456px;
 }
 
 .cafes {
-    position: absolute;
-    left: 1112px;
-    top: 156px;}
+  position: absolute;
+  left: 1112px;
+  top: 156px;
+}
+
 .foodtrucks {
-    position: absolute;
-    left: 1107px;
-    top: 247px;
+  position: absolute;
+  left: 1107px;
+  top: 247px;
 }
 
 .cone {
-    position: absolute;
-    left: 636px;
-    top: 108px;
+  position: absolute;
+  left: 636px;
+  top: 108px;
 }
 
 .tasty {
-    position: absolute;
-    left: 880px;
-    top: 423px;
+  position: absolute;
+  left: 880px;
+  top: 423px;
 }
 
 .products {
-    width: 1200px;
-    margin-top: 60px;
-    margin: 60px auto;
+  width: 1200px;
+  margin-top: 60px;
+  margin: 60px auto;
 }
 
-.products>span {
-    font-family: 'Titan One', cursive;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 30px;
-    line-height: 34px;
-    text-align: center;
-    letter-spacing: 0.04em;
-    text-transform: uppercase;
-    color: #FFA5BA;
+.products>p {
+  font-family: 'Titan One', cursive;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 30px;
+  line-height: 34px;
+  text-align: center;
+  letter-spacing: 0.04em;
+  text-transform: uppercase;
+  color: #FFA5BA;
 }
 
 .products>h2 {
-    font-family: 'Titan One', cursive;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 58px;
-    line-height: 66px;
-    text-align: center;
-    letter-spacing: 0.06em;
-    text-transform: uppercase;
-    color: var(--color-red);
-    margin-top: 16px;
-    margin-bottom: 20px;
+  font-family: 'Titan One', cursive;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 58px;
+  line-height: 66px;
+  text-align: center;
+  letter-spacing: 0.06em;
+  text-transform: uppercase;
+  color: var(--color-red);
+  margin-top: 16px;
+  margin-bottom: 20px;
 }
 
 .products-list {
-    display: flex;
-    justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
 }
 
 .products-item {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 368px;
-    text-align: center;
-    padding-top: 165px;
-    padding-bottom: 60px;
-    border-radius: 24px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 368px;
+  text-align: center;
+  padding-top: 165px;
+  padding-bottom: 60px;
+  border-radius: 24px;
 }
 
 .products-item:nth-child(1) {
-    background-color: var(--color-pink);
+  background-color: var(--color-pink);
 }
 
 .products-item:nth-child(2) {
-    background-color: var(--color-mustard);
+  background-color: var(--color-mustard);
 }
 
 .products-item:nth-child(3) {
-    background-color: var(--color-green);
+  background-color: var(--color-green);
 }
 
 .products-item>h3 {
-    font-family: 'Titan One';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 30px;
-    line-height: 34px;
-    text-align: center;
-    letter-spacing: 0.04em;
-    text-transform: uppercase;
-    color: var(--color-white);
-    margin-bottom: 32px;
+  font-family: 'Titan One';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 30px;
+  line-height: 34px;
+  text-align: center;
+  letter-spacing: 0.04em;
+  text-transform: uppercase;
+  color: var(--color-white);
+  margin-bottom: 32px;
 }
 
 .products-item>p {
-    font-family: 'DM Sans';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 176%;
-    text-align: center;
-    letter-spacing: 0.04em;
-    color: var(--color-white);
-    width: 241px;
-    height: 106px;
-    margin-top: 32px;
-    margin-bottom: 60px;
+  font-family: 'DM Sans';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 176%;
+  text-align: center;
+  letter-spacing: 0.04em;
+  color: var(--color-white);
+  width: 241px;
+  height: 106px;
+  margin-top: 32px;
+  margin-bottom: 60px;
 }
 
 .products-item>img {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 /* Fin CSS Equipo 1*/
@@ -218,33 +222,33 @@ p {
 
 /* Inicio CSS Equipo 2*/
 :root {
-    --font-main: 'DM Sans';
-    --transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    --cursor: pointer;
-    --color-white: #fff;
-    --color-red: #D41443;
-    --color-black: #000000;
+  --font-main: 'DM Sans';
+  --transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  --cursor: pointer;
+  --color-white: #fff;
+  --color-red: #D41443;
+  --color-black: #000000;
 }
 
-*{
-    padding: 0;
-    margin: 0;
+* {
+  padding: 0;
+  margin: 0;
 }
 
 a {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 body {
-    font-size: 14px;
-    width: 1600px;
-    margin: 0 auto;
+  font-size: 14px;
+  width: 1600px;
+  margin: 0 auto;
 }
 
 .container {
-    width: 1200px;
-    box-sizing: border-box;
-    margin: 0 auto;
+  width: 1200px;
+  box-sizing: border-box;
+  margin: 0 auto;
 }
 
 /* Dont touch */
@@ -253,33 +257,33 @@ body {
 /* Start to write code from here */
 /* CODE -------- */
 
-.tradition_and_love{
+.tradition_and_love {
   width: 100%;
   height: 1229px;
   background-color: #FFF5F6;
-  display:flex;
+  display: flex;
   flex-direction: column;
   background-image: url(".././images/section.png");
   background-repeat: no-repeat;
 }
 
-.title{
-  font-family:'Titan One', cursive;
+.title {
+  font-family: 'Titan One', cursive;
   font-weight: 400;
-  line-height:30px;
+  line-height: 30px;
   text-align: center;
 }
 
-.main-title{
+.main-title {
   padding-top: 60px;
-  color:#FFA5BA;
+  color: #FFA5BA;
   font-size: 30px;
   line-height: 34px;
   letter-spacing: 0.04em;
   text-align: center;
 }
 
-.second-title{
+.second-title {
   color: #D41443;
   font-size: 58px;
   font-weight: 400;
@@ -289,40 +293,39 @@ body {
 
 }
 
-.imag-y-text{
-  display:flex;
+.imag-y-text {
+  display: flex;
 }
 
 
-.paragraph{
+.paragraph {
   font-family: 'DM Sans', sans-serif;
   margin: 150px 0 0 99px;
   width: 463px;
   font-weight: 500;
 }
 
-.paragraph__one{
+.paragraph__one {
   font-size: 16px;
   line-height: 28px;
   letter-spacing: 0.04em;
   text-align: left;
 }
 
-.paragraph__two{
+.paragraph__two {
   margin-top: 32px;
-  color:#907E82;
+  color: #907E82;
   font-size: 14px;
   line-height: 27px;
   text-align: left;
 }
 
-button{
-  margin-top: 40px;
+button {
   width: 176px;
   height: 44px;
   background-color: #FFFFFF;
   border-radius: 22px;
-  font-family:'DM Sans', sans-serif;
+  font-family: 'DM Sans', sans-serif;
   font-weight: 700;
   font-size: 16px;
   line-height: 28px;
@@ -331,15 +334,15 @@ button{
 
 }
 
-.second-main{
-  display:flex;
+.second-main {
+  display: flex;
 }
 
-.second-main__elements{
+.second-main__elements {
   width: 288px;
 }
 
-.second-main__elements h2{
+.second-main__elements h2 {
   color: #D41443;
   font-family: 'Titan One', cursive;
   font-size: 58px;
@@ -349,7 +352,7 @@ button{
   text-align: start;
 }
 
-.second-main__elements p{
+.second-main__elements p {
   font-family: 'DM Sans', sans-serif;
   font-size: 16px;
   font-weight: 700;
@@ -359,46 +362,47 @@ button{
 
 }
 
-.colash{
+.colash {
   width: 1013px;
   height: 430px;
-  display:flex;
+  display: flex;
   align-items: center;
 }
 
-.testimony{
+.testimony {
   margin-top: 320px;
-  font-family:'DM Sans', sans-serif;
+  font-family: 'DM Sans', sans-serif;
   font-weight: 500;
   text-align: center;
 }
 
-.testimony__image{
-  width:85px;
-  height:85px;
+.testimony__image {
+  width: 85px;
+  height: 85px;
 }
 
-.testimony__background{
-  width:968px;
-  height:138px;
-  background-color:#FAFAFA;
+.testimony__background {
+  width: 968px;
+  height: 138px;
+  background-color: #FAFAFA;
 }
 
-.testimony__paragraph{
+.testimony__paragraph {
   font-size: 16px;
   font-weight: 500;
   line-height: 30px;
   letter-spacing: 0.04em;
-  color:#000000;
+  color: #000000;
 }
 
-.testimony__name{
+.testimony__name {
   font-size: 20px;
   line-height: 37px;
   letter-spacing: 0em;
   text-align: center;
   color: #000000;
 }
+
 /* Fin CSS Equipo 2*/
 
 /* Inicio CSS Equipo 3*/
