css a section advantages
Se le agresa css a section advantages en 320px

--- a/src/partials/Advantages.html
+++ b/src/partials/Advantages.html
@@ -5,39 +5,55 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <link rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css" />
+  <link rel="stylesheet" href="../css/styles.css">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Titan+One&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@700&family=Titan+One&display=swap" rel="stylesheet">
+
+  <title>advantages</title>
 </head>
 
 <body>
-  <section>
-    <ul>
-      <li>
-        <svg width="50" height="50">
-          <use href=".././images/iconadvantages.svg#icon-frozen1"></use>
-        </svg>
 
-        <h3>721</h3>
-        <p>Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
-      </li>
+  <div class="advantages__container">
+    <section class="advantages__section">
+      <article class="advantages_article">
+        <p class="advantages__iconns">
+          <svg width="50" height="50">
+            <use href=".././images/iconadvantages.svg#icon-frozen1"></use>
+          </svg>
+        </p>
+        <h3 class="advantages__tile">721</h3>
+        <p class="advantages__descriptions">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</h4>
+      </article>
 
-      <li>
-        <svg width="50" height="50">
-          <use href=".././images/iconadvantages.svg#icon-frozen2"></use>
-        </svg>
-
-        <h3>16kg</h3>
-        <p>Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
-      </li>
-
-      <li>
-        <svg width="44" height="50">
-          <use href=".././images/iconadvantages.svg#icon-frozen3"></use>
-        </svg>
-
-        <h3>84</h3>
-        <p>Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
-      </li>
-  </section>
+     
+      <article class="advantages_article">
+        <p class="advantages__iconns">
+          <svg width="50" height="50">
+            <use href=".././images/iconadvantages.svg#icon-frozen2"></use>
+          </svg>
+        </p>
+        <h3 class="advantages__tile">16kg</h3>
+        <p class="advantages__descriptions">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
+      </article>
+      <article class="advantages_article">
+        <p class="advantages__iconns">
+          <svg width="44" height="50">
+            <use href=".././images/iconadvantages.svg#icon-frozen3"></use>
+          </svg>
+        </p>
+        <h3 class="advantages__tile">84</h3>
+        <p class="advantages__descriptions">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
+      </article>
+    </section>
+  </div>
 </body>
 
 </html>
