--- a/src/partials/hero-header.html
+++ b/src/partials/hero-header.html
@@ -23,7 +23,7 @@
     <header>
       <div>
         <a href="">
-          <img src="src/images/sooo-tasty.png" alt="logo" />
+          <img src="/src/images/group.png" alt="logo" />
         </a>
         <h3>ICECREAM</h3>
         <nav>
@@ -34,7 +34,7 @@
             <li><a href="our products">Our Products</a></li>
             <li><a href="contact">Contact</a></li>
           </ul>
-          <button class="button" type="submit">Buy now</button>
+          <button class="button" type="submit">Buy now ></button>
         </nav>
       </div>
       <div>
@@ -45,32 +45,44 @@
           <button class="button" type="submit">How it's made?</button>
         </div>
         <div>
-          <h2>BIO ECO</h2>
           <a href="">
-            <img src="src/images/milk.jpg" alt="logo" />
+            <img src="/src/images/milk.png" alt="milk" />
           </a>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit, sed do
             eismod tempor incididunt ut labore et
           </p>
+          <a href="">
+            <img src="/src/images/arrow.png" alt="arrow" />
+          </a>
         </div>
       </div>
 
       <div>
         <!-- big ice cream cone image -->
         <a href="">
-          <img src="src/images/cream-cone.jpg" alt="logo" />
+          <img src="/src/images/cream-cone.png" alt="big-icecream" />
         </a>
       </div>
 
       <div>
-        <h2>16</h2>
-        <p>cafes</p>
-        <h2>23</h2>
-        <p>food trucks</p>
         <div>
           <a href="">
-            <img src="src/images/sooo-tasty1.jpg" alt="logo" />
+            <img src="/src/images/circle.png" alt="circle" />
+          </a>
+          <h2>16</h2>
+          <p>cafes</p>
+        </div>
+        <div>
+          <a href="">
+            <img src="/src/images/circle.png" alt="circle" />
+          </a>
+          <h2>23</h2>
+          <p>food trucks</p>
+        </div>
+        <div>
+          <a href="">
+            <img src="/src/images/sooo-tasty1.jpg" alt="sooo-tasty" />
           </a>
         </div>
       </div>
