--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -28,10 +28,17 @@
 
       <div>
         <a href="">
+          <img
+            src="/src/images/rectanle-milk.png"
+            alt="rectrangle-milk"
+            width="1200"
+          />
+        </a>
+        <a href="">
             <img
-              src="src/images/cow-and-milk.jpg"
+              src="/src/images/cow-and-milk.png"
               alt="cow and milk picture"
-              width="50"
+              width="501"
             />
           </a>
       </div>
@@ -49,12 +56,12 @@
           maximus. Creas massa nibh, tincidunt.
         </p>
         <p>Aliquam erat volutpat. Aenean accumsan.</p>
-        <button class="button" type="submit">Read more</button>
+        <button class="button" type="submit">Read more ></button>
       </div>
       <div>
         <a href="">
             <img
-              src="src/images/721picture.jpg"
+              src="/src/images/721picture.png"
               alt="picture"
               width="50"
             />
@@ -65,7 +72,7 @@
       <div>
         <a href="">
             <img
-              src="src/images/16kg-picture.jpg"
+              src="/src/images/16kg-picture.png"
               alt="picture"
               width="50"
             />
@@ -76,7 +83,7 @@
       <div>
         <a href="">
             <img
-              src="src/images/84-picture.jpg"
+              src="/src/images/84picture.png"
               alt="picture"
               width="50"
             />
