--- a/css/styles.css
+++ b/css/styles.css
@@ -200,23 +200,24 @@ p {
   text-transform: uppercase;
   color: var(--color-red);
   margin-top: 16px;
-  margin-bottom: 20px;
 }
 
 .products-list {
   display: flex;
   justify-content: space-between;
+  margin-top: 281px;
 }
 
 .products-item {
+  position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
   width: 368px;
   text-align: center;
-  padding-top: 165px;
   padding-bottom: 60px;
   border-radius: 24px;
+  padding-top: 165px;
 }
 
 .products-item:nth-child(1) {
@@ -229,6 +230,30 @@ p {
 
 .products-item:nth-child(3) {
   background-color: var(--color-green);
+}
+
+.products-item:nth-child(1)::before {
+  position: absolute;
+  top: -261px;
+  content: url('/images/prod-1.png');
+  width: 100%;
+  height: 394px;
+}
+
+.products-item:nth-child(2)::before {
+  position: absolute;
+  top: -261px;
+  content: url('/images/prod-2.png');
+  width: 100%;
+  height: 394px;
+}
+
+.products-item:nth-child(3)::before {
+  position: absolute;
+  top: -261px;
+  content: url('/images/prod-3.png');
+  width: 100%;
+  height: 394px;
 }
 
 .products-item>h3 {
