--- a/src/CSS/styles.css
+++ b/src/CSS/styles.css
@@ -1,7 +1,5 @@
-/* 
-@media  screen and (max-width= 800px) {
-    
-} */
+
+
 :root{
     --rojo-marca: #D41443;
     --rosado-marca:#FFA5BA;
@@ -13,7 +11,7 @@
 }
 .container-footer{
     display: flex;
-    width: 320px;
+    width: 100%;
     
     background-color:var(--rosado-fondo);
     flex-direction: column;
@@ -22,7 +20,7 @@
     
    
 }
-/* .margins{
+/* size-orientation{
     margin-left: 20px;
     padding-left: 20px;
     font-family: 'Titan One', cursive;
@@ -36,7 +34,13 @@
     color: #D41443;
 
 } */
-.margins >h3{
+.Made {
+    margin-top: 0px;
+}
+.homemade {
+    margin-bottom: 2px;
+}
+.size-homemade >h3{
     font-family: 'Titan One';
 font-style: normal;
 font-weight: 400;
@@ -49,7 +53,7 @@ margin-left: 20px;
 
  
  }
- .margins >h2{
+ .with-passion-orientation >h2{
     margin-left: 20px;
    margin-bottom: 0px;
    margin-top: 0px;
@@ -80,8 +84,25 @@ color: var(--negro-textos);
  .number{
     color: var(--rojo-marca);
  }
- .registered{
+ 
+ .registered1{
     margin-top: 16px;
+    margin-bottom: 0px;
+    font-family: 'DM Sans';
+font-style: normal;
+font-weight: 700;
+font-size: 14px;
+line-height: 152%;
+display: flex;
+justify-content: center;
+/* or 21px */
+
+/* text-align: center; */
+
+color: var(--gris-textos);
+ }
+ .registered2{
+    margin-top: 0px;
     margin-bottom: 3px;
     font-family: 'DM Sans';
 font-style: normal;
@@ -128,4 +149,329 @@ color: var(--gris-textos);
     margin-top: 0px;
     margin-bottom: 40px;
  }
+.circular-container:hover {
+    background:var(--rojo-marca);
+}
+ /*++++++++++++++++++++++++++++++ IPADS TABLETS ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++*/
+ 
+ @media screen and (min-width: 768px) and (max-width: 1200px) {
+    .container-footer{
+        display: flex;
+        width: 100%;
+        
+        background-color:var(--rosado-fondo);
+        flex-direction: column;
+        font-family: 'DM Sans', sans-serif;
+        
+        
+       
+    }
+    
+    .size-homemade >h3{
+        font-family: 'Titan One';
+font-style: normal;
+font-weight: 400;
+font-size: 26px;
+line-height: 30px;
+letter-spacing: 0.04em;
+text-transform: uppercase;
+    
+    color: var(--rosado-marca);
+    margin-left: 16px;
+    
+     
+     }
+     .with-passion-orientation >h2{
+        margin-left: 16px;
+       margin-bottom: px;
+       margin-top: 0px;
+       font-family: 'Titan One';
+font-style: normal;
+font-weight: 400;
+font-size: 48px;
+line-height: 55px;
+letter-spacing: 0.06em;
+text-transform: uppercase;
+
+    
+    color: var(--rojo-marca);
+     
+     }
+     .contacts{
+        display: flex;
+        font-family: 'DM Sans';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 186%;
+    /* or 22px */
+    margin-right: 16px;
+    
+    
+    color: var(--negro-textos);
+     }
+     .number{
+        color: var(--rojo-marca);
+     }
+     
+     .circular-container{
+        display: flex;
+            justify-content: center;
+            align-items: center;
+        width: 34px;
+        height: 34px;
+        background:var(--rosado-marca);
+        border-radius: 50%;
+        
+       
+     }
+     .icon{
+        
+        fill: var(--blanco-marca);
+     }
+     .social-links{
+        display: flex;
+        
+        margin-top: 110px;
+        
+        margin-bottom: 40px;
+        gap: 30px;
+     }
+     .line{
+       
+        width: 100%;
+        border-top: 1px solid var(--gris-separadores);
+    
+     }
+     .columns-footer{
+        display: flex;
+        justify-content: space-between;
+     }
+     .contacts >p{
+        margin-top: 0px;
+        margin-bottom: 0px;
+     }
+     .orientation{
+        display: flex;
+        justify-content: center;
+     }
+     .registered1{
+        margin-top: 8px;
+        margin-bottom: 8px;
+        font-family: 'DM Sans';
+font-style: normal;
+font-weight: 700;
+font-size: 14px;
+line-height: 186%;
+/* identical to box height, or 26px */
+
+letter-spacing: 0.02em;
+    
+    /* or 21px */
+    
+    /* text-align: center; */
+    
+    color: var(--gris-textos);
+     }
+     .registered2{
+        margin-left: 2px;
+        margin-top: 8px;
+        margin-bottom: 8px;
+        font-family: 'DM Sans';
+font-style: normal;
+font-weight: 700;
+font-size: 14px;
+line-height: 186%;
+/* identical to box height, or 26px */
+
+letter-spacing: 0.02em;
+    
+    
+    /* or 21px */
+    
+    /* text-align: center; */
+    
+    color: var(--gris-textos);
+     }
+
+ .second-column{
+    align-items: center;
+ } 
+ .with-passion-orientation{
+    margin-bottom: 40px;
+ }   
+     
+    
+} 
+
+ 
+ /*++++++++++++++++++++++++++++++ MOnitores, platallas Grandes ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++*/
+ 
+ @media screen and (min-width: 1201px){
+    .container-footer{
+        display: flex;
+        width: 100%;
+        
+        background-color:var(--rosado-fondo);
+        flex-direction: column;
+        font-family: 'DM Sans', sans-serif;
+        
+        
+       
+    }
+    .with-passion-orientation{
+        margin-bottom: 60px;
+     } 
+    .Made {
+        margin-top: 30px;
+        margin-bottom: 0px;
+    }
+    .homemade {
+        margin-top: 30px;
+        margin-bottom: 16px;
+    }
+    .size-homemade >h3{
+        
+        font-family: 'Titan One';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 30px;
+        line-height: 34px;
+        letter-spacing: 0.04em;
+        text-transform: uppercase;
+        
+    
+    color: var(--rosado-marca);
+    margin-left: 16px;
+    
+     
+     }
+     .size-homemade {
+        display: flex;
+     }
+     .with-passion-orientation >h2{
+        margin-left: 16px;
+       margin-bottom: 0px;
+       margin-top: 0px;
+       font-family: 'Titan One';
+font-style: normal;
+font-weight: 400;
+font-size: 58px;
+line-height: 66px;
+letter-spacing: 0.06em;
+text-transform: uppercase;
+
+    
+    color: var(--rojo-marca);
+     
+     }
+     .with-passion-orientation{
+        display: flex;
+     }
+     .contacts{
+        display: flex;
+        font-family: 'DM Sans';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 186%;
+    letter-spacing: 0.02em;
+    /* or 22px */
+    margin-right: 16px;
+    
+    
+    
+    color: var(--negro-textos);
+     }
+     .number{
+        color: var(--rojo-marca);
+     }
+     
+     .circular-container{
+        display: flex;
+            justify-content: center;
+            align-items: center;
+        width: 34px;
+        height: 34px;
+        background:var(--rosado-marca);
+        border-radius: 50%;
+        
+       
+     }
+     .icon{
+        
+        fill: var(--blanco-marca);
+     }
+     .social-links{
+        display: flex;
+        
+        margin-top: 50px;
+        
+        margin-bottom: 30px;
+        gap: 30px;
+     }
+     .line{
+       
+        width: 100%;
+        border-top: 1px solid var(--gris-separadores);
+    
+     }
+     .columns-footer{
+        display: flex;
+        justify-content: space-between;
+     }
+     .contacts >p{
+        margin-top: 0px;
+        margin-bottom: 0px;
+     }
+     .orientation{
+        display: flex;
+        justify-content: center;
+     }
+     .registered1{
+        margin-top: 8px;
+        margin-bottom: 8px;
+        font-family: 'DM Sans';
+font-style: normal;
+font-weight: 700;
+font-size: 14px;
+line-height: 186%;
+/* identical to box height, or 26px */
+
+letter-spacing: 0.02em;
+    
+    /* or 21px */
+    
+    /* text-align: center; */
+    
+    color: var(--gris-textos);
+     }
+     .registered2{
+        margin-left: 2px;
+        margin-top: 8px;
+        margin-bottom: 8px;
+        font-family: 'DM Sans';
+font-style: normal;
+font-weight: 700;
+font-size: 14px;
+line-height: 186%;
+/* identical to box height, or 26px */
+
+letter-spacing: 0.02em;
+    
+    
+    /* or 21px */
+    
+    /* text-align: center; */
+    
+    color: var(--gris-textos);
+     }
+
+ .second-column{
+    align-items: center;
+ }    
+     
+    
+} 
+
  
