--- a/src/partials/index.html
+++ b/src/partials/index.html
@@ -32,13 +32,18 @@
 
 <body>
     <footer class="container-footer">
-        <div>
-            <div class="margins">
-                <h3>HOMEMADE ICE CREAM <br> MADE</h3>
-               
+        <div class="columns-footer">
+            <div class="size-orientation">
+                <div class="size-homemade">
+                <h3 class="homemade">HOMEMADE ICE CREAM</h3>
+                <h3 class="Made">MADE</h3>
+                 </div>
+                 <div class="with-passion-orientation">
                 <h2>WITH</h2>
                 <h2>PASSION</h2>
             </div>
+            </div>
+            <div class="second-column">
             <section class="social-links">
                 <div class="circular-container">
                     <svg class="icon" width="20" height="20">
@@ -59,13 +64,18 @@
                     </svg>
                   </div>
             </section>
+        
             <div class="contacts">
                 <P>Feel free to contact</P>
                 <p class="number">+61(O)383 766 284</p>
             </div>
         </div>
+        </div>
         <Div class="line"></Div>
-        <p class="registered">© 2022 - IceCream. <br> All Rights Reserved.</p>
+        <div class="orientation">
+        <p class="registered1">© 2022 - IceCream. </p>
+        <p class="registered2">All Rights Reserved. </p>
+        </div>
     </footer>
       
     
