--- a/css/styles.css
+++ b/css/styles.css
@@ -20,7 +20,7 @@ a {
 
 body {
     font-size: 14px;
-    width: 1600px;
+    width: 1200px;
     margin: 0 auto;
 }
 
@@ -36,14 +36,73 @@ body {
 /* Start to write code from here */
 /* CODE -------- */
 
+/* tablets*/
+@media screen and (max-width: 768px){
+  body {
+    font-size: 14px;
+    width: 768px;
+    margin: 0 auto;
+  }
+
+  .title {
+    margin-top: 60px;
+  }
+
+  .main-title {
+    font-size: 26px;
+    line-height: 29.77px;
+    margin-bottom: 16px;
+  }
+
+  .second-title {
+    font-size: 48px;
+    line-height: 54.96px;
+  }
+
+  .imag-y-text {
+    width: 768px;
+    height: 1092px;
+    background-color: #FFF5F6;
+  }
+
+  .imag-y-text img {
+    width: 336px;
+    height: 335px;
+    margin-right: 34px;
+  }
+
+  .paragraph {
+    font-size: 14px;
+    line-height: 24.64px;
+  }
+
+  .paragraph__one {
+    margin-left: 34px;
+  }
+
+  .paragraph__two {
+    margin-left: 34px;
+  }
+
+}
+
+/*phone*/
+@media screen and (max-width: 480px){
+  body {
+    font-size: 14px;
+    width: 768px;
+    margin: 0 auto;
+  }
+
+}
+
+/* desktop*/
 .tradition_and_love{
   width: 100%;
   height: 1229px;
   background-color: #FFF5F6;
   display:flex;
   flex-direction: column;
-  background-image: url(".././images/section.png");
-  background-repeat: no-repeat;
 }
 
 .title{
@@ -60,6 +119,7 @@ body {
   line-height: 34px;
   letter-spacing: 0.04em;
   text-align: center;
+  margin-bottom: 16px;
 }
 
 .second-title{
@@ -68,18 +128,23 @@ body {
   font-weight: 400;
   line-height: 66.41px;
   letter-spacing: 0.06em;
-
-
 }
 
 .imag-y-text{
   display:flex;
+  background-image: url(".././images/section.png");
+  background-repeat: no-repeat;
+  margin-top: 60px;
+}
+
+.imag-y-text img {
+  margin-right: 99px;
 }
 
 
 .paragraph{
   font-family: 'DM Sans', sans-serif;
-  margin: 150px 0 0 99px;
+  padding-top: 90px;
   width: 463px;
   font-weight: 500;
 }
@@ -116,10 +181,19 @@ button{
 
 .second-main{
   display:flex;
+  width: 1080px;
+  margin: 0 auto;
+  justify-content: space-between;
+  padding-right: 75px;
+}
+
+.second-main_svg {
+  margin-bottom: 40px;
 }
 
 .second-main__elements{
   width: 288px;
+  margin-top: 60px;
 }
 
 .second-main__elements h2{
@@ -132,25 +206,48 @@ button{
   text-align: start;
 }
 
-.second-main__elements p{
+.second-main__text {
   font-family: 'DM Sans', sans-serif;
   font-size: 16px;
   font-weight: 700;
   line-height: 28px;
   letter-spacing: 0.02em;
   text-align: left;
+  margin-top: 16px;
+}
 
+.gallery {
+  position: relative;
 }
 
 .colash{
+  position: absolute;
   width: 1013px;
   height: 430px;
   display:flex;
   align-items: center;
+  left: 90px;
+  top: -552px;
+}
+
+.colash > :not(:last-child) {
+  margin-right: 8px;
+}
+
+.colash_4 {
+  margin-top: 9px;
+}
+
+.colash_5 {
+  margin-top: -45px;
+}
+
+.colash_6 {
+  margin-top: 12px;
 }
 
 .testimony{
-  margin-top: 320px;
+  margin-top: 480px;
   font-family:'DM Sans', sans-serif;
   font-weight: 500;
   text-align: center;
@@ -162,17 +259,33 @@ button{
 }
 
 .testimony__background{
+  display: flex;
   width:968px;
   height:138px;
   background-color:#FAFAFA;
+  margin: 0 auto;
+  padding: 0 auto;
+  justify-content: center;
+  margin-top: 16px;
+  margin-bottom: 16px;
+}
+
+.Quotation {
+  margin-top: 22px;
 }
 
 .testimony__paragraph{
+  display: flex;
+  display: inline-flex;
   font-size: 16px;
   font-weight: 500;
   line-height: 30px;
   letter-spacing: 0.04em;
   color:#000000;
+  text-decoration: underline;
+  -webkit-text-decoration-color: #e1e1e1;
+  text-decoration-color: #e1e1e1;
+  align-items: center;
 }
 
 .testimony__name{
@@ -181,4 +294,6 @@ button{
   letter-spacing: 0em;
   text-align: center;
   color: #000000;
+  margin-top: 16px;
+  margin-bottom: 33px;
 }
