--- a/css/styles.css
+++ b/css/styles.css
@@ -7,13 +7,9 @@
   --color-green: #C2E297;
 }
 
-header {
+header>.container {
   color: #FFFFFF;
   background-color: var(--color-pink);
-}
-
-header>.container {
-  padding-top: 37px;
 }
 
 .home-container {
@@ -38,6 +34,7 @@ header>.container {
   border: none;
   padding: 0px 37px;
   height: 44px;
+  cursor: pointer;
 }
 
 .nav-button>button:hover {
@@ -67,6 +64,23 @@ nav ul li {
   color: var(--color-red);
 }
 
+.hero {
+  background-image: url('/images/slider-pic4.png'), url('/images/slider-pic7.png'), url('/images/Ellipse-pink3.png');
+  background-repeat: no-repeat;
+  background-position: bottom right, top 108px right 328px, top 54px right 149px;
+  position: relative;
+  padding-top: 37px;
+  padding-bottom: 60px;
+  width: 1168px;
+  margin: 0px auto;
+}
+
+.hero-banner {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 60px;
+}
+
 .hero-button {
   margin-top: 24px;
 }
@@ -80,6 +94,7 @@ nav ul li {
   line-height: 18px;
   text-align: center;
   margin: 0;
+  cursor: pointer;
 }
 
 .hero-button>button:nth-child(1) {
@@ -101,10 +116,6 @@ nav ul li {
 
 .hero-button>button:nth-child(2):hover {
   background-color: #ECEBEB;
-}
-
-.hero-left {
-  padding-top: 60px;
 }
 
 .ice-cream {
@@ -132,12 +143,17 @@ p {
 }
 
 .milk {
+  position: relative;
   display: flex;
   align-items: center;
   margin-top: 40px;
 }
 
-.milk p {
+.milk-text {
+  position: relative;
+}
+
+.milk-text>p {
   width: 200px;
   height: 78px;
   font-family: 'DM Sans';
@@ -147,33 +163,74 @@ p {
   line-height: 140%;
 }
 
-.cafes {
+.milk-text::after {
   position: absolute;
-  left: 1112px;
-  top: 156px;
+  content: url('/images/arrow-right3.png');
+  top: 98px;
+  cursor: pointer;
+}
+
+.hero-right {
+  list-style: none;
+}
+
+.cafes {
+  position: relative;
+  margin-bottom: 18px;
+  padding-right: 18px;
+  z-index: 0;
+}
+
+.cafes::before {
+  position: absolute;
+  content: url('/images/Ellipse-white1.png');
+  background-repeat: no-repeat;
+  top: -4px;
+  right: 0;
+  z-index: -1;
 }
 
 .foodtrucks {
-  position: absolute;
-  left: 1107px;
-  top: 247px;
+  position: relative;
+  padding-right: 18px;
+  z-index: 0;
 }
 
-.cone {
+.foodtrucks::before {
   position: absolute;
-  left: 636px;
-  top: 108px;
+  content: url('/images/Ellipse-white1.png');
+  background-repeat: no-repeat;
+  top: -4px;
+  right: 0;
+  z-index: -1;
 }
 
-.tasty {
-  position: absolute;
-  left: 880px;
-  top: 423px;
+.cafes>h2,
+.foodtrucks>h2 {
+  font-family: 'Titan One';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 46px;
+  line-height: 53px;
+  text-align: right;
+  letter-spacing: 0.04em;
+  text-transform: uppercase;
+  color: var(--color-red);
+}
+
+.cafes>p,
+.foodtrucks>p {
+  font-family: 'DM Sans';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 18px;
+  text-align: right;
+  color: var(--color-white);
 }
 
 .products {
-  width: 1200px;
-  margin-top: 60px;
+  width: 1168px;
   margin: 60px auto;
 }
 
