--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,38 @@
 /* Dont touch - just for David*/
-
-/* Inicio CSS Equipo 1*/
 :root {
+  --font-main: 'DM Sans';
+  --transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  --cursor: pointer;
+  --color-white: #fff;
+  --color-red: #D41443;
+  --color-black: #000000;
   --color-pink: #FFB8CA;
   --color-mustard: #F0D1A5;
   --color-green: #C2E297;
 }
+
+* {
+  padding: 0;
+  margin: 0;
+}
+
+a {
+  text-decoration: none;
+}
+
+body {
+  font-size: 14px;
+  width: 1600px;
+  margin: 0 auto;
+}
+
+.container {
+  width: 1200px;
+  box-sizing: border-box;
+  margin: 0 auto;
+}
+
+/* Inicio CSS Equipo 1*/
 
 header>.container {
   color: #FFFFFF;
@@ -177,31 +204,27 @@ p {
 .cafes {
   position: relative;
   margin-bottom: 18px;
-  padding-right: 18px;
+  right: 18px;
   z-index: 0;
 }
 
-.cafes::before {
+.cafes>svg {
   position: absolute;
-  content: url('/images/white-circle.png');
-  background-repeat: no-repeat;
   top: -4px;
-  right: 0;
+  right: -18px;
   z-index: -1;
 }
 
 .foodtrucks {
   position: relative;
-  padding-right: 18px;
+  right: 18px;
   z-index: 0;
 }
 
-.foodtrucks::before {
+.foodtrucks>svg {
   position: absolute;
-  content: url('/images/white-circle.png');
-  background-repeat: no-repeat;
   top: -4px;
-  right: 0;
+  right: -18px;
   z-index: -1;
 }
 
@@ -345,39 +368,14 @@ p {
   cursor: pointer;
 }
 
+
 /* Fin CSS Equipo 1*/
 
 
 /* Inicio CSS Equipo 2*/
-:root {
-  --font-main: 'DM Sans';
-  --transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  --cursor: pointer;
-  --color-white: #fff;
-  --color-red: #D41443;
-  --color-black: #000000;
-}
 
-* {
-  padding: 0;
-  margin: 0;
-}
 
-a {
-  text-decoration: none;
-}
 
-body {
-  font-size: 14px;
-  width: 1600px;
-  margin: 0 auto;
-}
-
-.container {
-  width: 1200px;
-  box-sizing: border-box;
-  margin: 0 auto;
-}
 
 /* Dont touch */
 
@@ -385,7 +383,7 @@ body {
 /* Start to write code from here */
 /* CODE -------- */
 
-.tradition_and_love {
+/*.tradition_and_love {
   width: 100%;
   height: 1229px;
   background-color: #FFF5F6;
@@ -515,7 +513,7 @@ body {
   letter-spacing: 0em;
   text-align: center;
   color: #000000;
-}
+}*/
 
 /* Fin CSS Equipo 2*/
 
