--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -22,17 +22,14 @@ body {
   padding-top: 32px;
 }
 
-.advantages_article{
-padding-bottom: 32px;
-
+.advantages_article {
+  padding-bottom: 32px;
 }
 
 .advantages__iconns {
+
   margin: 0;
-
   padding-bottom: 16px;
-
-
 }
 
 .advantages__tile {
@@ -49,13 +46,88 @@ padding-bottom: 32px;
   margin-bottom: 4px;
 }
 
-.advantages__descriptions{
-font-family: 'DM Sans';
-font-style: normal;
-font-size: 12px;
-line-height: 170%;
-margin: 0;
-width: 230px;
-height: 36px;
+.advantages__descriptions {
+  font-family: 'DM Sans';
+  font-style: normal;
+  font-size: 12px;
+  line-height: 20.4px;
+  margin: 0;
+  width: 230px;
+  height: 36px;
+}
 
+
+@media screen and (min-width:768px) {
+
+  .advantages__container {
+    width:768px;
+  }
+
+  .advantages__section {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    text-align: left;
+    padding-left: 32px;
+  }
+
+  .advantages_article {
+    padding-bottom: 64px;
+  }
+
+  .advantages--title_1  {
+    width: 98px;
+    height: 56px;
+    padding-bottom: 13px;
+    padding-right: 86px;
+    font-size: 48px;
+  line-height: 54.96px;
+  }
+
+  .advantages--title_2  {
+    width: 147px;
+    height: 56px;
+    padding-bottom: 13px;
+    padding-right: 37px;
+    font-size: 48px;
+  line-height: 54.96px;
+  }
+
+  .advantages--title_3 {
+    width: 77px;
+    height: 56px;
+    padding-bottom: 13px;
+    font-size: 48px;
+  line-height: 54.96px;
+
+  }
+
+  .advantages__descriptions--1{
+    width: 180px;
+    height: 71px;
+    padding-right: 4px;
+    font-size: 14px;
+  line-height: 24.36px;
+  }
+
+  .advantages__descriptions--2{
+    width: 162px;
+    height: 67px;
+    padding-right: 22px;
+    font-size: 14px;
+  line-height: 24.36px;
+  }
+
+  .advantages__descriptions--3{
+    width: 159px;
+    height: 67px;
+    font-size: 14px;
+  line-height: 24.36px;
+  }
+
+  .advantages__iconns {
+
+    margin: 0;
+    padding-bottom: 36px;
+  }
 }
