--- a/src/partials/Advantages.html
+++ b/src/partials/Advantages.html
@@ -29,19 +29,19 @@
             <use href=".././images/iconadvantages.svg#icon-frozen1"></use>
           </svg>
         </p>
-        <h3 class="advantages__tile">721</h3>
-        <p class="advantages__descriptions">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</h4>
+        <h3 class="advantages__tile advantages--title_1">721</h3>
+        <p class="advantages__descriptions advantages__descriptions--1">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</h4>
       </article>
 
-     
+
       <article class="advantages_article">
         <p class="advantages__iconns">
           <svg width="50" height="50">
             <use href=".././images/iconadvantages.svg#icon-frozen2"></use>
           </svg>
         </p>
-        <h3 class="advantages__tile">16kg</h3>
-        <p class="advantages__descriptions">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
+        <h3 class="advantages__tile advantages--title_2">16kg</h3>
+        <p class="advantages__descriptions advantages__descriptions--2">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
       </article>
       <article class="advantages_article">
         <p class="advantages__iconns">
@@ -49,8 +49,8 @@
             <use href=".././images/iconadvantages.svg#icon-frozen3"></use>
           </svg>
         </p>
-        <h3 class="advantages__tile">84</h3>
-        <p class="advantages__descriptions">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
+        <h3 class="advantages__tile advantages--title_3">84</h3>
+        <p class="advantages__descriptions advantages__descriptions--3">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
       </article>
     </section>
   </div>
