--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -131,3 +131,70 @@ body {
     padding-bottom: 36px;
   }
 }
+
+
+@media screen and (min-width:1200px) {
+
+  .advantages__container {
+    width: 1200px;
+  }
+
+
+
+  .advantages--title_1  {
+    width: 98px;
+    height: 65px;
+    padding-bottom: 16px;
+    padding-right: 305px;
+    font-size: 58px;
+  line-height: 66.41px;
+
+  }
+
+  .advantages--title_2  {
+    width: 147px;
+    height: 65px;
+    padding-bottom: 16px;
+    padding-right: 250px;
+    font-size: 58px;
+  line-height: 66.41px;
+  }
+
+  .advantages--title_3 {
+    width: 77px;
+    height: 65px;
+    padding-bottom: 16px;
+    font-size: 58px;
+  line-height: 66.41px;
+
+  }
+
+  .advantages__descriptions--1{
+    width: 288px;
+    height: 52px;
+    padding-right: 115px;
+    font-size: 16px;
+  line-height: 28.16px;
+  }
+
+  .advantages__descriptions--2{
+    width: 317px;
+    height: 52px;
+    padding-right: 80px;
+    font-size: 16px;
+    line-height: 28.16px;
+  }
+
+  .advantages__descriptions--3{
+    width: 288px;
+    height:52px;
+    font-size: 16px;
+    line-height: 28.16px;
+  }
+
+  .advantages__iconns {
+
+    margin: 0;
+    padding-bottom: 40px;
+  }
+}
